- updated to latest version of bootstrap - added initial markdown toolbar implementation